# jobmatch

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  .python-version  LAUNCH.md  PITCH.md  POSTMORTEM.md  README.md  dev.sh  docker-compose-vm.yml  docker-compose.prod.yml  docker-compose.yml  forward-ports.sh  pyproject.toml  requirements-dev.txt
.claude/: settings.json
.github/workflows/: cd.yml  ci.yml  deploy-prod.yml  deploy.yml  terraform.yml
app/ai-assistant/: .env.example  Dockerfile  requirements.txt
doc_support_contexte/: FEATURE_TOP_OFFERS.md  Job match.xlsx  POSTMORTEM_miniterraform.md  django_candidate_orm_spec.md  formalisation_succes.md  pitch_30s_3min_guide_complet.md
docs/: ASYNC_PATTERNS.md  DATABASE_LOCATIONS.md  GCP_CREDENTIALS.md  SECURITY_NOTES.md  api_extension.md  cloud_vs_opensource.md  cv_ingestion_spec.md  docker_compose_guide.md  interface_gui_offers.md  interface_gui_offers_match.html  interface_gui_offers_match.md  mise-en-prod.md  multi_environnement_101.md  multi_environnement_gestion.md  pre_commit_101.md  top_offers_architecture.md
shared/: INSTALL.md  INSTALLATION_STATUS.md  README.md  __init__.py  pyproject.toml
shared/scripts/: embeddings_demo.py
shared/src/shared/: __init__.py  pyproject.toml
shared/src/shared/constants/: __init__.py  content_types.py
shared/src/shared/embeddings/: __init__.py  embeddings.py  providers.py  test_embeddings.py  test_providers.py  test_providers_integration.py
shared/src/shared/interfaces/: __init__.py  common.py  cv.py
shared/src/shared/utils/: __init__.py
(+179 files in other folders)
